--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Results</h1>
-<% nrel_facade.each do |station| %>
+<% @nrel_facade.each do |station| %>
 <section class="station" id="<% station.name %>">
   <h2>Station:</h2>
   <h3>Name: </h3><%= station.name %>
